--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <img
                   src="assets/chai_shao_yang.webp"
                   alt="chai shao yang"
-                  class="header__profile-image"
+                  class="header__profile-image img-fluid"
                   width="120"
                   height="120"
                   loading="lazy"
@@ -96,8 +96,8 @@
 
     <!-- ======= Hero Section ======= -->
     <section id="hero">
-      <div class="hero__container">
-        <div class="hero__content">
+      <div class="hero__container row">
+        <div class="hero__content col">
           <p><span>Hi, my name is</span></p>
           <h1>Chai Shao Yang.</h1>
           <h2>I am a Student Developer.</h2>
@@ -117,11 +117,11 @@
             ></a>
           </div>
         </div>
-        <div class="hero__image-wrapper">
+        <div class="hero__image-wrapper col">
           <img
             src="assets/programming.svg"
-            alt=""
-            class="hero__image"
+            alt="Developer working on computer with programming code"
+            class="hero__image img-fluid"
             fetchpriority="high"
             width="800"
             height="600"
@@ -146,11 +146,11 @@
             </p>
           </div>
 
-          <div class="about__row">
-            <div class="about__image-wrapper" data-aos="fade-right">
+          <div class="about__row row">
+            <div class="about__image-wrapper col" data-aos="fade-right">
               <img
                 src="assets/chai_shao_yang.webp"
-                class="about__image"
+                class="about__image img-fluid"
                 alt="chai shao yang"
                 width="360"
                 height="360"
@@ -158,13 +158,13 @@
                 decoding="async"
               />
             </div>
-            <div class="about__content" data-aos="fade-left">
+            <div class="about__content col" data-aos="fade-left">
               <h3>Profile</h3>
               <p class="about__subtitle">
                 Currently, I'm a JC 2 student at Anglo-Chinese Junior College.
               </p>
-              <div class="about__details-row">
-                <div class="about__details-col">
+              <div class="about__details-row row">
+                <div class="about__details-col col">
                   <ul>
                     <li>
                       <i class="bx bx-chevron-right"></i>
@@ -172,7 +172,7 @@
                     </li>
                   </ul>
                 </div>
-                <div class="about__details-col">
+                <div class="about__details-col col">
                   <ul>
                     <li>
                       <i class="bx bx-chevron-right"></i>
@@ -195,8 +195,8 @@
                 Robotics continued, allowing me to clinch a second national title in Robotics and
                 even <span>represent Singapore at the International Final in Türkiye</span>.
               </p>
-              <div class="about__cta">
-                <div class="about__cta-col">
+              <div class="about__cta row">
+                <div class="about__cta-col col">
                   <a href="assets/resume.pdf" target="_blank" rel="noopener noreferrer" class="about__resume-btn">
                     View Resume <i class="bx bx-link-external" style="font-size:x-large"></i>
                   </a>
@@ -218,8 +218,8 @@
             </p>
           </div>
 
-          <div class="achievements__row">
-            <div class="achievements__column" data-aos="fade-up">
+          <div class="achievements__row row">
+            <div class="achievements__column col" data-aos="fade-up">
               <h3 class="achievements__title">Computing &amp; Robotics</h3>
               <div class="achievements__item">
                 <h4>Hack&amp;Roll</h4>
@@ -333,7 +333,7 @@
                 <h5>2023</h5>
               </div>
             </div>
-            <div class="achievements__column" data-aos="fade-up" data-aos-delay="100">
+            <div class="achievements__column col" data-aos="fade-up" data-aos-delay="100">
               <h3 class="achievements__title">Science &amp; Math</h3>
               <div class="achievements__item">
                 <h4>Singapore Physics League</h4>
@@ -455,8 +455,8 @@
             <p>Lastly, here are some notable projects which I have contributed to.</p>
           </div>
 
-          <div class="portfolio__row" data-aos="fade-up">
-            <div class="portfolio__filters-wrapper">
+          <div class="portfolio__row row" data-aos="fade-up">
+            <div class="portfolio__filters-wrapper col">
               <ul class="portfolio__filters">
                 <li data-filter="*" class="filter-active">All</li>
                 <li data-filter=".filter-app">Games</li>
@@ -466,10 +466,10 @@
             </div>
           </div>
 
-          <div class="portfolio__grid" data-aos="fade-up" data-aos-delay="100">
-            <div class="portfolio__item filter-app">
+          <div class="portfolio__grid row" data-aos="fade-up" data-aos-delay="100">
+            <div class="portfolio__item col filter-app">
               <div class="portfolio__card">
-                <img src="assets/portfolio/portfolio-1.webp" class="portfolio__image" alt="" />
+                <img src="assets/portfolio/portfolio-1.webp" class="portfolio__image img-fluid" alt="Chess game application built with Python and Pygame" />
                 <div class="portfolio__links">
                   <a
                     href="assets/portfolio/portfolio-1.webp"
@@ -502,9 +502,9 @@
               </div>
             </div>
 
-            <div class="portfolio__item filter-web">
+            <div class="portfolio__item col filter-web">
               <div class="portfolio__card">
-                <img src="assets/portfolio/portfolio-2.webp" class="portfolio__image" alt="" />
+                <img src="assets/portfolio/portfolio-2.webp" class="portfolio__image img-fluid" alt="Avis Fashion website for sustainable fashion research project" />
                 <div class="portfolio__links">
                   <a
                     href="assets/portfolio/portfolio-2.webp"
@@ -542,9 +542,9 @@
               </div>
             </div>
 
-            <div class="portfolio__item filter-web">
+            <div class="portfolio__item col filter-web">
               <div class="portfolio__card">
-                <img src="assets/portfolio/portfolio-4.webp" class="portfolio__image" alt="" />
+                <img src="assets/portfolio/portfolio-4.webp" class="portfolio__image img-fluid" alt="30by30 home gardening platform supporting Singapore's food sustainability goal" />
                 <div class="portfolio__links">
                   <a
                     href="assets/portfolio/portfolio-4.webp"
@@ -574,9 +574,9 @@
               </div>
             </div>
 
-            <div class="portfolio__item filter-robotics">
+            <div class="portfolio__item col filter-robotics">
               <div class="portfolio__card">
-                <img src="assets/portfolio/portfolio-3.webp" class="portfolio__image" alt="" />
+                <img src="assets/portfolio/portfolio-3.webp" class="portfolio__image img-fluid" alt="NRC 2021 robot collecting and sorting cars with obstacle avoidance" />
                 <div class="portfolio__links">
                   <a
                     href="assets/portfolio/portfolio-3.webp"
@@ -613,9 +613,9 @@
               </div>
             </div>
 
-            <div class="portfolio__item filter-robotics">
+            <div class="portfolio__item col filter-robotics">
               <div class="portfolio__card">
-                <img src="assets/portfolio/portfolio-5.webp" class="portfolio__image" alt="" />
+                <img src="assets/portfolio/portfolio-5.webp" class="portfolio__image img-fluid" alt="NRC 2022 robot crossing obstacles and detecting objects" />
                 <div class="portfolio__links">
                   <a
                     href="assets/portfolio/portfolio-5.webp"
@@ -651,9 +651,9 @@
               </div>
             </div>
 
-            <div class="portfolio__item filter-robotics">
+            <div class="portfolio__item col filter-robotics">
               <div class="portfolio__card">
-                <img src="assets/portfolio/portfolio-6.webp" class="portfolio__image" alt="" />
+                <img src="assets/portfolio/portfolio-6.webp" class="portfolio__image img-fluid" alt="WRO 2024 robot stacking and sorting house objects by color" />
                 <div class="portfolio__links">
                   <a
                     href="assets/portfolio/portfolio-6.webp"
